Make GPTBot server capable of conducting multi-turn conversations
